crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__captures_tests__nested_captures_with_types.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/captures_tests.rs
---
Q = (function
    name: (identifier) @name :: string
    body: (block
        (statement)* @body_stmts :: Statement)) @func :: Function
---
Root
  Def
    Id "Q"
    Equals "="
    Capture
      Tree
        ParenOpen "("
        Id "function"
        Capture
          Field
            Id "name"
            Colon ":"
            Tree
              ParenOpen "("
              Id "identifier"
              ParenClose ")"
          CaptureToken "@name"
          Type
            DoubleColon "::"
            Id "string"
        Field
          Id "body"
          Colon ":"
          Tree
            ParenOpen "("
            Id "block"
            Capture
              Quantifier
                Tree
                  ParenOpen "("
                  Id "statement"
                  ParenClose ")"
                Star "*"
              CaptureToken "@body_stmts"
              Type
                DoubleColon "::"
                Id "Statement"
            ParenClose ")"
        ParenClose ")"
      CaptureToken "@func"
      Type
        DoubleColon "::"
        Id "Function"
