crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__captures_tests__quantified_capture_with_type.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/captures_tests.rs
---
Q = (statement)+ @stmts :: Statement
---
Root
  Def
    Id "Q"
    Equals "="
    Capture
      Quantifier
        Tree
          ParenOpen "("
          Id "statement"
          ParenClose ")"
        Plus "+"
      CaptureToken "@stmts"
      Type
        DoubleColon "::"
        Id "Statement"
