crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__captures_tests__sequence_capture_with_type.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/captures_tests.rs
---
Q = {(a) (b)} @seq :: MySequence
---
Root
  Def
    Id "Q"
    Equals "="
    Capture
      Seq
        BraceOpen "{"
        Tree
          ParenOpen "("
          Id "a"
          ParenClose ")"
        Tree
          ParenOpen "("
          Id "b"
          ParenClose ")"
        BraceClose "}"
      CaptureToken "@seq"
      Type
        DoubleColon "::"
        Id "MySequence"
